# valajourney

./: README.md
gtkbasic/: .gitignore  about_dialog.vala  application.vala  build.sh  dialog.vala  window.vala
helloworld/: .gitignore  README.md  build.sh  class.vala  fileio.vala  main.vala  process.vala
texteditor/: .gitignore  CMakeLists.txt  build.sh  texteditor.vala
texteditor/cmake/: FindVala.cmake  ValaPrecompile.cmake
